--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import "tailwindcss";
+
+
+* {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  scroll-behavior: smooth;
+}
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
-/* @theme inline {
+@theme inline {
+  --color-primary: #6e4e24;
+  --color-secondary: #f1ebe6;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,10 +26,78 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-} */
+}
 
 body {
   /* background: var(--background);
   color: var(--foreground); */
   font-family: sans-serif;
+}
+
+
+/* CSS */
+.button-74 {
+  background-color: #ffffff;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-74:hover {
+  background-color: #fff;
+}
+
+.button-74:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .button-74 {
+    min-width: 120px;
+    padding: 0 25px;
+  }
+}
+
+
+/* Notch Card */
+.notch-card {
+  position: relative;
+}
+
+.notch-card::before,
+.notch-card::after {
+  content: "";
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: transparent;
+}
+
+/* left cut */
+.notch-card::before {
+  left: -32px;
+  bottom: 0;
+  border-bottom-right-radius: 32px;
+  box-shadow: 16px 16px 0 16px white;
+}
+
+/* top cut */
+.notch-card::after {
+  right: 0;
+  top: -32px;
+  border-bottom-right-radius: 32px;
+  box-shadow: 16px 16px 0 16px white;
 }
